2007-10-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (read.graph.dimacs) : updated to 
	handle 'edge' problems
	* interfaces/R/src/rinterface.c.in (R_igraph_read_graph_dimacs) :
	updated

2007-10-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c.in (R_igraph_attribute_init) :
	graph attribute handling added

2007-08-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/topology.R (graph.count.isomorphisms.vf2)
	(graph.get.isomorphisms.vf2, graph.subisomorphic.vf2)
	(graph.count.subisomorphisms.vf2, graph.get.subisomorphisms.vf2)
	* interfaces/R/src/rinterface.c.in (R_igraph_subisomorphic_vf2)
	(R_igraph_count_isomorphisms_vf2, R_igraph_count_subisomorphisms_vf2)
	(R_igraph_get_isomorphisms_vf2, R_igraph_get_subisomorphisms_vf2) : added

2007-08-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structure.generators.R (graph.famous) 
	* interfaces/R/src/rinterface.c.in (R_igraph_famous) : added

2007-08-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/topology.R (graph.isomorphic.vf2)
	* interfaces/R/src/rinterface.c.in (R_igraph_isomorphic_vf2) :
	added 'map12' and 'map21' arguments

2007-08-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/layout.R (layout.fruchterman.reingold) :
	again small update because of stimulus

	* interfaces/R/igraph/R/foreign.R (write.graph, write.graph.dot)
	* interfaces/R/src/rinterface.c.in (R_igraph_write_graph_dot) : added	

2007-08-16  Gabor Csardi  <csardi@belus>

	* interfaces/R/src/rinterface.c.in (R_igraph_before, R_igraph_after)
	(R_igraph_before2, R_igraph_after2) : added static to R_INLINE

2007-08-13  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structure.generators.R (graph.formula) : added

2007-08-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/components.R (clusters)
	* interfaces/R/igraph/R/interface.R (graph.empty, vcount) 